SFS_RA_JeopardyManager/force-app/main/default/objects/SFS_RA_Agent_Manager_Entry__c/SFS_RA_Agent_Manager_Entry__c.object-meta.xml
<CustomObject>
    <description>Individual entry records for each Agent Manager</description>
    <label>Agent Manager Entry</label>
    <nameField>
        <displayFormat>AME-{000000}</displayFormat>
        <label>Agent Manager Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Manager Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>