SFS_RA_JeopardyManager/force-app/main/default/objects/SFS_RA_Agent_Manager_Entry__c/fields/SFS_RA_Agent_Manager__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Agent_Manager__c</fullName>
    <label>Agent Manager</label>
    <referenceTo>SFS_RA_Agent_Manager__c</referenceTo>
    <relationshipLabel>Agent Manager Entries</relationshipLabel>
    <relationshipName>SFS_RA_Agent_Manager_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>