SFS_RA_JeopardyManager/force-app/main/default/objects/SFS_RA_Agent_Manager_Entry__c/fields/SFS_RA_Consider_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Consider_Travel_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Travel Time?</label>
    <type>Checkbox</type>
</CustomField>