SFS_RA_JeopardyManager/force-app/main/default/objects/SFS_RA_Agent_Manager_Entry__c/fields/SFS_RA_Jeopardy_Type__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Jeopardy_Type__c</fullName>
    <label>Jeopardy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late Start Travel</fullName>
            </value>
            <value>
                <fullName>Late Completion</fullName>
            </value>
            <value>
                <fullName>Rescheduling Required</fullName>
            </value>
            <value>
                <fullName>Due Date Approaching</fullName>
            </value>
            <value>
                <fullName>Late Arrival</fullName>
            </value>
            <value>
                <fullName>Delayed Start</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>