SFS_RA_JeopardyManager/force-app/main/default/objects/SFS_RA_Agent_Manager_Entry__c/fields/SFS_RA_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Sequence_No__c</fullName>
    <label>Sequence No</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>