SFS_RA_JeopardyManager/force-app/main/default/objects/SFS_RA_Agent_Manager_Entry__c/fields/SFS_RA_Status__c.field-meta.xml
<CustomField>
    <fullName>SFS_RA_Status__c</fullName>
    <inlineHelpText>Status to be checked for Jeopardy.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>