SFS_RA_JeopardyManager/force-app/main/default/objects/SFS_RA_Agent_Manager_Entry__c/validationRules/SFS_RA_Start_End_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SFS_RA_Start_End_Time_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(SFS_RA_Start_Time__c &gt;  SFS_RA_End_Time__c,(TEXT( SFS_RA_Agent_Manager__r.SFS_RA_Agent_Type__c )) == &apos;Jeopardy Agent&apos;)</errorConditionFormula>
    <errorDisplayField>SFS_RA_Start_Time__c</errorDisplayField>
    <errorMessage>Start Time (min.) should be less than/ equal to End Time (min.)</errorMessage>
</ValidationRule>